[gd_scene load_steps=2 format=3 uid="uid://d2leader8aa"]

[ext_resource type="Script" path="res://scenes/ui/screens/LeaderboardScreen.gd" id="1_leaderboard"]

[node name="LeaderboardScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_leaderboard")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üèÜ Sƒ±ralama"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "Geri"
theme_override_font_sizes/font_size = 24

[node name="CategoryTabs" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WealthButton" type="Button" parent="MarginContainer/VBox/CategoryTabs"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "üí∞ Servet"
theme_override_font_sizes/font_size = 20

[node name="PvPButton" type="Button" parent="MarginContainer/VBox/CategoryTabs"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "‚öîÔ∏è PvP"
theme_override_font_sizes/font_size = 20

[node name="QuestButton" type="Button" parent="MarginContainer/VBox/CategoryTabs"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "üìú G√∂rev"
theme_override_font_sizes/font_size = 20

[node name="EconomyButton" type="Button" parent="MarginContainer/VBox/CategoryTabs"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "üìä Ekonomi"
theme_override_font_sizes/font_size = 20

[node name="GuildButton" type="Button" parent="MarginContainer/VBox/CategoryTabs"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "üè∞ Lonca"
theme_override_font_sizes/font_size = 20

[node name="SeasonInfo" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox/SeasonInfo"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SeasonLabel" type="Label" parent="MarginContainer/VBox/SeasonInfo/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Sezon 1 - G√∂lge √áaƒüƒ±"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBox/SeasonInfo/HBox"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/VBox/SeasonInfo/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Kalan S√ºre: 45 g√ºn"
theme_override_font_sizes/font_size = 24

[node name="MyRankPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox/MyRankPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/MyRankPanel/HBox"]
layout_mode = 2
text = "Senin Sƒ±ralaman:"
theme_override_font_sizes/font_size = 24

[node name="RankLabel" type="Label" parent="MarginContainer/VBox/MyRankPanel/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "#123"
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeaderboardList" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="RewardInfo" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/RewardInfo"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBox/RewardInfo/VBox"]
layout_mode = 2
text = "Sezon Sonu √ñd√ºlleri"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)

[node name="RewardText" type="Label" parent="MarginContainer/VBox/RewardInfo/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "1. üèÜ 5000 Gem + Efsanevi Unvan
2-3. üíé 2500 Gem + Epik Unvan
4-10. üí∞ 1000 Gem + Nadir Unvan"
theme_override_font_sizes/font_size = 18
